@@ -134,9 +134,17 @@ class SearchApiAutocompleteSearch extends Entity {
    */
   public function alterElement(array &$element, array $fields = array()) {
     if (search_api_autocomplete_access($this)) {
+
       $fields_string = $fields ? implode(' ', $fields) : '-';
-      $element['#attached']['css'][] = drupal_get_path('module', 'search_api_autocomplete') . '/search_api_autocomplete.css';
-      $element['#attached']['js'][] = drupal_get_path('module', 'search_api_autocomplete') . '/search_api_autocomplete.js';
+      $module_path = drupal_get_path('module', 'search_api_autocomplete');
+      $element['#attached']['css'][] = $module_path . '/search_api_autocomplete.css';
+      $element['#attached']['js'][] = $module_path . '/search_api_autocomplete.js';
+      if (isset($this->options['submit_button_selector'])) {
+        $element['#attached']['js'][] = array(
+          'type' => 'setting',
+          'data' => array('search_api_autocomplete' => array('selector' => $this->options['submit_button_selector'])),
+        );
+      }
       $element['#autocomplete_path'] = 'search_api_autocomplete/' . $this->machine_name . '/' . $fields_string;
       $element += array('#attributes' => array());
       $element['#attributes'] += array('class'=> array());
